syntax = "proto3";

package pb.svc.test;
option java_package="com.example.pb.svc.test";
option java_multiple_files=true;
option go_package = "github.com/example/test/pb/svc/test";

import "pb/unit/common/msg.proto";

service Test {
    rpc Greeting(GreetingReq) returns (GreetingRes);
}

message GreetingReq {
    string some = 1;
}

message GreetingRes {
    unit.common.ReturnMsg result = 1;
}
